--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -1,18 +1,24 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "src/server.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/src/server.js"
-        }
-    ],
-    "env":{
-        "NODE_ENV": "production"
+  "version": 2,
+  "builds": [
+    {
+      "src": "src/server.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": [
+          "src/config/db.js",
+          "src/config/inngest.js"
+        ]
+      }
     }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/src/server.js"
+    }
+  ],
+  "env": {
+    "NODE_ENV": "production"
+  }
 }
