--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,8 +6,7 @@
       "use": "@vercel/node",
       "config": {
         "includeFiles": [
-          "src/config/db.js",
-          "src/config/inngest.js"
+          "src/**"
         ]
       }
     }
