--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,16 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.43.1",
+    "@tailwindcss/vite": "^4.1.15",
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.12.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router": "^7.6.3"
+    "react-hot-toast": "^2.5.2",
+    "react-router": "^7.6.3",
+    "stream-chat": "^9.14.0",
+    "stream-chat-react": "^13.3.0",
+    "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
