--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.43.1",
+    "@stream-io/video-react-sdk": "^1.24.1",
     "@tailwindcss/vite": "^4.1.15",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.12.2",
+    "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.5.2",
